fix header dark mode

--- a/_assets/stylesheets/general/header.scss
+++ b/_assets/stylesheets/general/header.scss
@@ -13,8 +13,10 @@
   a,
   a:visited,
   a:hover {
-    color: $color-white;
-    background: none;
+    @include themed() {
+      color: $color-white;
+      background: none;
+    }
 
     @include text-3d();
   }
